# usb_traffic_analyzer

./: .gitignore
Network/client/: README.md  main.cpp  notes
Network/client/src/core/: clientinteraction.h  connection.h
Network/client/src/core/commands/: functions.cpp
Network/client/src/core/database/: database.h
Network/client/src/server/: server.cpp
Network/server/: CMakeLists.txt  README.md  main.cpp
Network/server/sql/: DB structure.sql
Network/server/src/client/: client.cpp  client.h
Network/server/src/config/: config.cpp  config.h
Network/server/src/core/: clientinteraction.cpp  interaction.h
Network/server/src/core/commands/: functions.h  scheduler.cpp  scheduler.h
Network/server/src/core/database/: database.cpp
Network/server/src/server/: server.h
TrafficAnalyzer/: platformio.ini
TrafficAnalyzer/src/: main.cpp
TrafficAnalyzer/src/includes/core/: controller.cpp  controller.h
TrafficAnalyzer/src/includes/device/gsm/: gsm.cpp  gsm.h
TrafficAnalyzer/src/includes/device/keyboard/: keyboard.cpp  keyboard.h
TrafficAnalyzer/src/includes/device/mouse/: mouse.cpp  mouse.h
TrafficAnalyzer/src/includes/device/speaker/: speaker.cpp  speaker.h
TrafficAnalyzer/src/includes/traffic/: traffic.cpp  traffic.h
